# mfbuilder

./: .gitignore  Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml  requirements.txt
mdlbuilder/: export_utils.py  futils.py  handlers.py  interpolation.py  mdlbuilder.py  mdlbuilder_ref.py  mdlutils.py  mfmain.py  pic_utils.py  pictures.py  pictures_ref.py  protocols.py  pstbuilder.py  rasters.py  utils.py  validators.py  workingTools.py
mdlbuilder/archive/: pictures.py
mdlbuilder/dto/: base.py  grid.py  observations.py  packages_flow.py  types.py
mdlbuilder/mdlbase/: mfgrid.py  mfpackages.py  mixins.py
mdlbuilder/mf2005/: mfbuilder.py  mfgrid.py  mfpackages.py
mdlbuilder/mf6/: mfbuilder.py  mfgrid.py  mfpackages.py  mfpackages_flow.py  observations.py
mdlbuilder/tempold/: forecast_novgorod.ipynb  novgorod_pest.py  pest.py  q.py  watersheds.py  zonalstat.py
mdlbuilder/utils/: mfdata.py
mfbuilder/: handlers.py  mfmain.py  protocols.py
mfbuilder/archive/: futils.py  handlers.py  layouts.py
mfbuilder/dto/: base.py  grid.py  observations.py  output.py  packages.py  packages_flow.py
mfbuilder/mdlbase/: mfgrid.py  mfpackages.py  mixins.py
mfbuilder/mf2005/: mfbuilder.py  mfgrid.py  mfpackages.py
mfbuilder/mf6/: mfbuilder.py  mfgrid.py  mfpackages.py  mfpackages_flow.py  (+1 more)
tests/: flood_code_temp.py  test_001.py  test_002.py  test_003.py  test_004_pest_raspad.py  test_004_raspad.py  test_005_dz.py  test_005_dz_pest.py  test_005_pest_dz_recreate.py  test_006_kstov.py  test_006_kstov_pest.py  test_007_dz_changer.py  test_007_kstov_changer.py
(+77 files in other folders)
