[project]
name = "mfbuilder"
version = "0.1.0"
description = ""
authors = [
    {name = "cawsW",email = "friclox@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flopy (>=3.9.5,<4.0.0)",
    "pyemu (>=1.3.8,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "plpygis (>=0.6.1,<0.7.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pysheds (>=0.5,<0.6)",
    "pykrige (>=1.7.3,<2.0.0)",
    "pyshp (>=3.0.2.post1,<4.0.0)",
    "rasterstats (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
